tests/data/topLevelTyped/negative/AutoProperty.fs
module A

type T(x: int, y: string) =
    member val X: int = x
    member val Y: string = y
